--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ indoc = "2.0"
 serde = { version ="1.0", optional = true }
 thiserror = "1.0"
 
+[dev-dependencies]
+serde = { version = "1.0", features = ["derive"] }
+
 [features]
 default = ["std"]
 preserve_order = ["indexmap"]
