--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 [dependencies]
 indexmap = { version = "2.0.2", optional = true }
 indoc = "2.0.4"
+paste = "1.0.14"
 serde = { version ="1.0.189" }
 thiserror = "1.0.50"
 
