--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Evan Hedbor <evan@hedbor.org>"]
 edition = "2021"
 
 [dependencies]
-indexmap = { version = "2.0.2", optional = true }
+indexmap = { version = "2.0.2", optional = true, features = ["serde"] }
 indoc = "2.0.4"
 paste = "1.0.14"
 serde = { version ="1.0.189" }
