--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,6 @@ serde = { version = "1.0.189", features = ["derive"] }
 default = ["std"]
 preserve_order = ["indexmap"]
 std = ["serde/std", "indexmap?/std"]
+
+[profile.test.features]
+default = ["std", "preserve_order"]
