--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "vdflex"
-version = "0.1.1"
+version = "0.1.0"
 authors = ["Evan Hedbor <evan@hedbor.org>"]
+description = "A (de)serializer for the Valve Data Format (VDF, a.k.a. KeyValues) using Serde"
+keywords = ["vdf", "keyvalues", "valve", "serialization", "serde"]
+categories = ["encoding", "parser-implementations", "no-std"]
+license = "MIT"
+repository = "https://github.com/ehedbor/vdflex"
 edition = "2021"
 
 [dependencies]
@@ -18,6 +23,3 @@ serde = { version = "1.0.189", features = ["derive"] }
 default = ["std"]
 preserve_order = ["indexmap"]
 std = ["serde/std", "indexmap?/std"]
-
-[profile.test.features]
-default = ["std", "preserve_order"]
