--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "vdflex"
 version = "0.1.0"
 authors = ["Evan Hedbor <evan@hedbor.org>"]
-description = "A (de)serializer for the Valve Data Format (VDF, a.k.a. KeyValues) using Serde"
+description = "A (de)serializer for the Valve Data File (VDF, a.k.a. KeyValues) format using Serde"
 keywords = ["vdf", "keyvalues", "valve", "serialization", "serde"]
 categories = ["encoding", "parser-implementations", "no-std"]
 license = "MIT"
