--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ env:
 jobs:
   test:
     name: Tests (${{matrix.os}})
-    runs-on: ${{matrix.os}
+    runs-on: ${{matrix.os}}
     strategy:
       matrix:
         os:
