--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,7 @@ jobs:
     name: Tests (${{matrix.os}})
     runs-on: ${{matrix.os}}
     strategy:
+      fail-fast: false
       matrix:
         os:
         - ubuntu-latest
@@ -30,6 +31,7 @@ jobs:
     name: Build (${{matrix.os}})
     runs-on: ${{matrix.os}}
     strategy:
+      fail-fast: false
       matrix:
         os:
         - ubuntu-latest
