--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,8 +42,8 @@ jobs:
       run: cargo check
     - name: Check (preserve_order)
       run: cargo check --features preserve_order
-    - name: Check (no-std)
-      run: cargo check --no-default-features
+#    - name: Check (no-std)
+#      run: cargo check --no-default-features
 
   clippy:
     name: Clippy
