--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,20 +16,23 @@ jobs:
     name: Tests (${{matrix.os}})
     runs-on: ${{matrix.os}}
     strategy:
+      fail-fast: false
       matrix:
         os:
         - ubuntu-latest
         - windows-latest
     steps:
+    - uses: actions/checkout@v4
     - name: Run tests
       run: cargo test
-    - name: Run tests (preserve-order)
+    - name: Run tests (preserve_order)
       run: cargo test --features preserve_order
 
   build:
     name: Build (${{matrix.os}})
     runs-on: ${{matrix.os}}
     strategy:
+      fail-fast: false
       matrix:
         os:
         - ubuntu-latest
@@ -38,10 +41,10 @@ jobs:
     - uses: actions/checkout@v4
     - name: Check
       run: cargo check
-    - name: Check (preserve-order)
+    - name: Check (preserve_order)
       run: cargo check --features preserve_order
-    - name: Check (no-std)
-      run: cargo check --no-default-features
+#    - name: Check (no-std)
+#      run: cargo check --no-default-features
 
   clippy:
     name: Clippy
